# COSC519_Linux_Distro

build_env/: README.md
build_env/build_root/: version_check.sh
buildenv/: Dockerfile  README.md  version_check.sh
cosc519_OS/: .gitignore  Cargo.toml
cosc519_OS/.cargo/: config.toml
cosc519_OS/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
cosc519_OS/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
src/impl/x86_64/boot/: header.asm  main.asm
src/targets/x86_64/: linker.ld
src/targets/x86_64/iso/boot/grub/: grub.cfg
