[package]
name = "cosc519_OS"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile .dev]
panic = "abort"

[profile.release]
panic = "abort"


[build]
target = "x86_64-proj_os.json"

[dependencies]
bootloader = "0.9.8"